# musii-kit

./: .bumpversion.cfg  .dockerignore  .flake8  .gitignore  LICENSE.txt  Pipfile  README.md  build.py  install_kernel.sh  pyproject.toml  ruff.toml
.github/workflows/: main.yaml  master.yaml  publish_docker.yaml  pull_request.yml
docker/: Dockerfile
examples/data/: bach_invention_1.csv  bach_invention_1.musicxml
examples/notebook/: music-point-sets.ipynb  score-analysis.ipynb
musii_kit/: display.py
musii_kit/pattern_data/: evaluator.py  jku_pdd.py  mirex_metrics.py  pattern_set.py
musii_kit/pattern_discovery/: discovery.py
musii_kit/pattern_search/: matching.py
musii_kit/point_set/: generator.py  point_set.py  point_set_io.py  visualization.py
musii_kit/score_visualizer/: visualizer.py
posemirpy/: Cargo.toml  pyproject.toml
posemirpy/posemirpy/: __init__.py  posemirpy.pyi
posemirpy/src/: lib.rs
script/: install_kernel.sh  update_kernel.sh
src/main/musii_kit/data/: jku_pdd.py  mirex_metrics.py  pattern_set.py
src/main/musii_kit/pattern_data/: evaluator.py  jku_pdd.py  mirex_metrics.py  pattern_set.py
src/main/musii_kit/point_set/: generator.py  point_set.py  point_set_io.py  point_set_json.py
src/main/musii_kit/score_visualizer/: visualizer.py
src/test/data/: mirex_metrics_tests.py
src/test/pattern_data/: mirex_metrics_tests.py
src/test/point_set/: point_set_tests.py
tests/: test_mirex_metrics.py  test_pattern_set.py  test_point_set.py
tests/resources/: point-set-reps.musicxml  test-pattern-extraction.musicxml  test-point-set.csv  test-point-set.musicxml
tests/resources/pattern_set_csv/: test-piece-patterns.json
tests/resources/pattern_set_musicxml/: test-piece-patterns.json  test-point-set.musicxml
