[tool.poetry]
name = "musii-kit"
version = "0.3.0"
description = "Collection of tools for computational musicology"
authors = ["Otso Björklund <otso.bjorklund@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/otsob/musii-kit"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.21.4"
pandas = "^1.3.4"
jupyter = "^1.0.0"
music21 = "^7.1.0"
matplotlib = "^3.5.0"
scipy = "^1.7.3"
torch = "^2.0.0"
ipympl = "^0.9.2"
setuptools = "^67.6.1"
posemirpy = { path = "./posemirpy", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
