[tool.poetry]
name = "musii-kit"
version = "0.5.14"
description = "Collection of tools for computational musicology"
authors = ["Otso Björklund <otso.bjorklund@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/otsob/musii-kit"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0"
jupyter = "^1.0.0"
music21 = "^9.0"
matplotlib = "^3.5.0"
scipy = "^1.11.0"
ipympl = "^0.9.2"
setuptools = "^67.6.1"
posemirpy = { git = "https://github.com/otsob/posemir.git", subdirectory = "posemirpy" }
verovio = "^3.16.0"
cairosvg = "^2.7.1"
pypdf = "^3.15.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
