[tool.poetry]
name = "musii-kit"
version = "0.5.22"
description = "Collection of tools for computational musicology"
authors = ["Otso Björklund <otso.bjorklund@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/otsob/musii-kit"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
numpy = "^2.0"
pandas = "^3.0"
jupyter = "^1.1"
music21 = "^9.9"
matplotlib = "^3.10"
scipy = "^1.11.0"
ipympl = "^0.9"
setuptools = "^70.0"
posemirpy = { git = "https://github.com/otsob/posemir.git", subdirectory = "posemirpy" }
verovio = "^6.0"
cairosvg = "^2.8"
pypdf = "^6.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.10"
pytest = "^9.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
